# studio

./: .gitignore  Dockerfile.dev  LICENSE  README.md  compose.dev.yml  docker-entrypoint.sh  index.html
.github/workflows/: deploy.yml
app/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
app/public/: about.txt
app/src/: App.tsx  index.css  main.tsx
app/src/analysis/: base.ts  color.ts  performance.ts  quality.ts  types.d.ts
app/src/canvas/: useCanvas.ts
app/src/components/analysis/: Analysis.tsx  ColorAnalysis.tsx  EmptyAnalysis.tsx  ImageStatistics.tsx  ImageStructure.tsx  QualityMetrics.tsx  Stats.tsx
app/src/components/analysis/colors/: ColorAnalysis.tsx  ColorHistogram.tsx  color.ts  color.worker.ts  types.d.ts
app/src/components/analysis/compress/: CompressionTabs.tsx  CompressionVisualizer.tsx  Overview.tsx  compression.ts  types.d.ts
app/src/components/analysis/luminiscence/: BrightnessDistributionCard.tsx  ClippingAnalysis.tsx  DarkLight.tsx  DynamicRange.tsx  GammaAnalysis.tsx  InfoToolTop.tsx  LumHist.tsx  LuminCard.tsx  LuminanceAnalysis.tsx  luminance.ts  (+1 more)
app/src/components/api/: FileUpload.tsx
app/src/store/image/: hooks.ts  slice.ts  types.d.ts
app/src/store/store/: store.ts
app/src/wasm/: base.ts  worker.ts
assets/: color.worker-C5rAccVG.js  index-BfgnYzRz.js  index-BzaGrGwN.js  index-C1XXaYMd.css  index-D374TydL.css
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/analysis/: base.rs  color.rs
src/: package-lock.json  package.json
(+12 files in other folders)
