[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.7", optional = true }  # Add this line

[lib]
crate-type = ["cdylib", "rlib"]
console_error_panic_hook = { version = "0.1.7", optional = true }



[features]
default = ["console_error_panic_hook"]